# eaimty_bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: bot.rs  config.rs  context.rs  error.rs  main.rs  server.rs
src/commands/: dart.rs  dart_command.rs  dice.rs  dice_command.rs  mod.rs  ocr.rs
src/database/: connectfour.rs  minesweeper.rs  mod.rs  ocr.rs  reversi.rs  tictactoe.rs
src/handler/: about.rs  agree.rs  connectfour.rs  dart.rs  dice.rs  help.rs  minesweeper.rs  mod.rs  ocr.rs  reversi.rs  slot.rs  start.rs  tictactoe.rs
src/handlers/: about.rs  access.rs  agree.rs  dart.rs  dice.rs  help.rs  mine.rs  minesweeper.rs  mod.rs  ocr.rs  othello.rs  slot.rs  start.rs  tictactoe.rs
src/keywords/: dart.rs  dart_keyword.rs  dice.rs  dice_keyword.rs  mod.rs  unanimity.rs  unanimity_keyword.rs
