[package]
name = "eaimty_bot"
description = "个人用 Telegram Bot"
version = "0.7.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0 License"
repository = "https://github.com/EAimTY/eaimty_bot"

[dependencies]
carapax = { version = "0.10", features = ["session-fs"] }
getopts = "0.2"
lazy_static = "1.4"
leptess = "0.13"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
tempfile = "3.2"
tokio = { version = "1.10", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
