[package]
name = "eaimty_bot"
description = "个人用 Telegram Bot"
version = "1.0.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0 License"
repository = "https://github.com/EAimTY/eaimty_bot"

[dependencies]
async-trait = "0.1"
carapax = { version = "0.10", features = ["session-fs"] }
chrono = { version = "0.4", features = ["clock"], default-features = false }
getopts = "0.2"
leptess = "0.13"
rand = "0.8"
serde = "1.0"
tempfile = "3.2"
thiserror = "1.0"
tokio = { version = "1.11", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", default-features = false }

[profile.release]
lto = true
codegen-units = 1
