[package]
name = "eaimty_bot"
description = "个人用 Telegram Bot"
version = "2.0.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
edition = "2021"
rust-version = "1.59"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/eaimty_bot"

[dependencies]
anyhow = "1.0"
bytes = "1.1"
futures-util = "0.3"
gamie = { version = "0.8", features = ["connect_four", "minesweeper", "reversi", "tictactoe"] }
getopts = "0.2"
leptess = "0.13"
parking_lot = { version = "0.12", features = ["send_guard"] }
rand = { version = "0.8", features = ["getrandom"], default-features = false }
reqwest = { version = "0.11", default-features = false }
tgbot = "0.18"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread", "time"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
